# django-backend-starter

./: README.md
backend/: .env.template  LOGGING.md  README.md  manage.py  pyproject.toml  ruff.toml
backend/config/: __init__.py  asgi.py  database_router.py  logger.py  paths.py  wsgi.py
backend/config/settings/: __init__.py
backend/config/settings/django/: __init__.py  base.py  development.py  production.py
backend/config/settings/schemas/: __init__.py  database.py  django.py  environment.py  logging.py  py_project.py  registry.py  utils.py
backend/devtools/: README.md  __init__.py  __main__.py  cli.py
backend/devtools/commands/: __init__.py
backend/devtools/commands/database/: __init__.py  connection.py  core.py  guards.py  operations.py  setup.py  users.py  verify.py
backend/tests/: README.md  TESTING.md  __init__.py  conftest.py
backend/tests/db_commands/: EXAMPLES.md  README.md  __init__.py  demo_commands.py  quickstart.py  test_db_commands.sh
backend/tests/fixtures/: __init__.py  conftest.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
